// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetupEnhancedMeasurementSwitch should not render the switch when accountID is not selected yet 1`] = `<div />`;

exports[`SetupEnhancedMeasurementSwitch should not render the switch when enhanced measurement is already enabled 1`] = `
<div>
  <div
    class="googlesitekit-analytics-enable-enhanced-measurement"
  >
    <div
      class="googlesitekit-margin-top-0 googlesitekit-settings-enhanced-measurement-enabled"
    >
      <div
        class="googlesitekit-settings-enhanced-measurement-enabled-icon"
      >
        <svg />
      </div>
      Enhanced measurement is enabled for this web data stream
    </div>
    <p
      class="googlesitekit-settings-module__fields-group-helper-text"
    >
      This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
      <a
        aria-label="Learn more (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="https://support.google.com/analytics/answer/9216061?hl=en-US"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
  </div>
</div>
`;

exports[`SetupEnhancedMeasurementSwitch should render with the switch defaulting to the on position when enhanced measurement is not already enabled 1`] = `
<div>
  <div
    class="googlesitekit-analytics-enable-enhanced-measurement"
  >
    <div
      aria-checked="true"
      class="mdc-switch mdc-switch--checked"
      role="switch"
      tabindex="0"
    >
      <div
        class="mdc-switch__track"
      >
         
      </div>
      <div
        class="mdc-switch__thumb-underlay"
      >
        <div
          class="mdc-switch__thumb"
        >
          <input
            class="mdc-switch__native-control"
            id="googlesitekit-switch-0"
            readonly=""
            role="switch"
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <label
      class=""
      for="googlesitekit-switch-0"
    >
      Enable enhanced measurement
    </label>
    <p
      class="googlesitekit-settings-module__fields-group-helper-text"
    >
      This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
      <a
        aria-label="Learn more (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="https://support.google.com/analytics/answer/9216061?hl=en-US"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
  </div>
</div>
`;
